==> miro-kostadinov/tmos/trunk/tmos/services/lwip-1.4.0.rc1/src/ports/lm3s/lwip_drv.cpp <==
#include <tmos.h>
#include <hardware_cpp.h>
#include <rom_lm3s.h>
#include <lwip_drv.h>
#include "lwip/tcp_impl.h"
#include "lwip/autoip.h"
#include "lwip/dhcp.h"
#include "lwip/init.h"
#include "netif/stellarisif.h"
#include "lwip/stats.h"
#include <lwip_api.h>

static err_t low_level_transmit(struct netif *netif, struct pbuf *p)
{
	int iBuf;
	unsigned char *pucBuf;
	unsigned long *pulBuf;
	struct pbuf *q;
	int iGather;
	unsigned long ulGather;
	unsigned char *pucGather;
	MAC_Type* mac = (MAC_Type*)netif->state;

	/**
	 * Fill in the first two bytes of the payload data (configured as padding
	 * with ETH_PAD_SIZE = 2) with the total length of the payload data
	 * (minus the Ethernet MAC layer header).
	 *
	 */
	*((unsigned short *) (p->payload)) = p->tot_len - 16;

	/* Initialize the gather register. */
	iGather = 0;
	pucGather = (unsigned char *) &ulGather;
	ulGather = 0;

	/* Copy data from the pbuf(s) into the TX Fifo. */
	for (q = p; q != NULL; q = q->next)
	{
		/* Intialize a char pointer and index to the pbuf payload data. */
		pucBuf = (unsigned char *) q->payload;
		iBuf = 0;

		/**
		 * If the gather buffer has leftover data from a previous pbuf
		 * in the chain, fill it up and write it to the Tx FIFO.
		 *
		 */
		while ((iBuf < q->len) && (iGather != 0))
		{
			/* Copy a byte from the pbuf into the gather buffer. */
			pucGather[iGather] = pucBuf[iBuf++];

			/* Increment the gather buffer index modulo 4. */
			iGather = ((iGather + 1) % 4);
		}

		/**
		 * If the gather index is 0 and the pbuf index is non-zero,
		 * we have a gather buffer to write into the Tx FIFO.
		 *
		 */
		if ((iGather == 0) && (iBuf != 0))
		{
			mac->MACDATA = ulGather;
			ulGather = 0;
		}

		/* Initialze a long pointer into the pbuf for 32-bit access. */
		pulBuf = (unsigned long *)(void*) &pucBuf[iBuf];

		/**
		 * Copy words of pbuf data into the Tx FIFO, but don't go past
		 * the end of the pbuf.
		 *
		 */
		while ((iBuf + 4) <= q->len)
		{
			mac->MACDATA = *pulBuf++;
			iBuf += 4;
		}

		/**
		 * Check if leftover data in the pbuf and save it in the gather
		 * buffer for the next time.
		 *
		 */
		while (iBuf < q->len)
		{
			/* Copy a byte from the pbuf into the gather buffer. */
			pucGather[iGather] = pucBuf[iBuf++];

			/* Increment the gather buffer index modulo 4. */
			iGather = ((iGather + 1) % 4);
		}
	}

	/* Send any leftover data to the FIFO. */
	mac->MACDATA = ulGather;

	/* Wakeup the transmitter. */
	mac->MACTR = MAC_TR_NEWTX;

	/* Dereference the pbuf from the queue. */
	pbuf_free(p);

	LINK_STATS_INC(link.xmit);

	return (ERR_OK);
}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
	LWIP_DRIVER_DATA* drv_data = (LWIP_DRIVER_DATA*)netif;
	MAC_Type* mac = (MAC_Type*)netif->state;
	SYS_ARCH_DECL_PROTECT(lev);

	/**
	 * This entire function must run within a "critical section" to preserve
	 * the integrity of the transmit pbuf queue.
	 *
	 */
	SYS_ARCH_PROTECT(lev);

	/**
	 * Bump the reference count on the pbuf to prevent it from being
	 * freed till we are done with it.
	 *
	 */
	pbuf_ref(p);

	/**
	 * If the transmitter is idle, and there is nothing on the queue,
	 * send the pbuf now.
	 *
	 */
	if (PBUF_QUEUE_EMPTY(&drv_data->txq) && ((mac->MACTR & MAC_TR_NEWTX) == 0))
	{
		low_level_transmit(netif, p);
	}

	/* Otherwise place the pbuf on the transmit queue. */
	else
	{
		/* Add to transmit packet queue */
		if (!enqueue_packet(p, &drv_data->txq))
		{
			/* if no room on the queue, free the pbuf reference and return error. */
			pbuf_free(p);
			SYS_ARCH_UNPROTECT(lev);
			return (ERR_MEM);
		}
	}

	/* Return to prior interrupt state and return. */
	SYS_ARCH_UNPROTECT(lev);
	return ERR_OK;
}

static struct pbuf *low_level_receive(struct netif *netif)
{
	MAC_Type* mac = (MAC_Type*)netif->state;
	struct pbuf *p, *q;
	u16_t len;
	u32_t temp;
	int i;
	unsigned long *ptr;
#if LWIP_PTPD
	u32_t time_s, time_ns;

	/* Get the current timestamp if PTPD is enabled */
	lwIPHostGetTime(&time_s, &time_ns);
#endif

	/* Check if a packet is available, if not, return NULL packet. */
	if ((mac->MACNP & MAC_NP_NPR_M) == 0)
	{
		return (NULL);
	}

	/**
	 * Obtain the size of the packet and put it into the "len" variable.
	 * Note:  The length returned in the FIFO length position includes the
	 * two bytes for the length + the 4 bytes for the FCS.
	 *
	 */
	temp = mac->MACDATA;
	len = temp & 0xFFFF;

	/* We allocate a pbuf chain of pbufs from the pool. */
	p = pbuf_alloc(PBUF_RAW, len, PBUF_POOL);

	/* If a pbuf was allocated, read the packet into the pbuf. */
	if (p != NULL)
	{
		/* Place the first word into the first pbuf location. */
		*(unsigned long *) p->payload = temp;
		p->payload = (char *) (p->payload) + 4;
		p->len -= 4;

		/* Process all but the last buffer in the pbuf chain. */
		q = p;
		while (q != NULL)
		{
			/* Setup a byte pointer into the payload section of the pbuf. */
			ptr = (unsigned long *)q->payload;

			/**
			 * Read data from FIFO into the current pbuf
			 * (assume pbuf length is modulo 4)
			 *
			 */
			for (i = 0; i < q->len; i += 4)
			{
				*ptr++ = mac->MACDATA;
			}

			/* Link in the next pbuf in the chain. */
			q = q->next;
		}

		/* Restore the first pbuf parameters to their original values. */
		p->payload = (char *) (p->payload) - 4;
		p->len += 4;

		/* Adjust the link statistics */
		LINK_STATS_INC(link.recv);

#if LWIP_PTPD
		/* Place the timestamp in the PBUF */
		p->time_s = time_s;
		p->time_ns = time_ns;
#endif
	}

	/* If no pbuf available, just drain the RX fifo. */
	else
	{
		for (i = 4; i < len; i += 4)
		{
			temp = mac->MACDATA;
		}

		/* Adjust the link statistics */
		LINK_STATS_INC(link.memerr);
		LINK_STATS_INC(link.drop);
	}

	return (p);
}

static void low_level_init(struct netif *netif)
{
	u32_t temp;
	MAC_Type* mac = (MAC_Type*)netif->state;
	//struct ethernetif *ethernetif = netif->state;

	/* set MAC hardware address length */
	netif->hwaddr_len = ETHARP_HWADDR_LEN;

	/* set MAC hardware address */
	EthernetMACAddrGet(mac, &(netif->hwaddr[0]));

	/* maximum transfer unit */
	netif->mtu = 1500;

	/* device capabilities */
	/* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
	netif->flags = NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP
			| NETIF_FLAG_LINK_UP;

	/* Do whatever else is needed to initialize interface. */
	/* Disable all Ethernet Interrupts. */
	EthernetIntDisable(
			mac,
			(ETH_INT_PHY | ETH_INT_MDIO | ETH_INT_RXER | ETH_INT_RXOF
					| ETH_INT_TX | ETH_INT_TXER | ETH_INT_RX));
	temp = EthernetIntStatus(mac, false);
	EthernetIntClear(mac, temp);

	/* Initialize the Ethernet Controller. */
	EthernetInitExpClk(mac, system_clock_frequency);//SysCtlClockGet());

	/*
	 * Configure the Ethernet Controller for normal operation.
	 * - Enable TX Duplex Mode
	 * - Enable TX Padding
	 * - Enable TX CRC Generation
	 * - Enable RX Multicast Reception
	 */
	EthernetConfigSet(
			mac,
			(ETH_CFG_TX_DPLXEN | ETH_CFG_TX_CRCEN | ETH_CFG_TX_PADEN
					| ETH_CFG_RX_AMULEN));

	/* Enable the Ethernet Controller transmitter and receiver. */
	EthernetEnable(mac);

	/* Enable the Ethernet Interrupt handler. */
//	IntEnable( INT_ETH);
	NVIC->NVIC_EnableIRQ(Ethernet_IRQn); //THIS IS BAD!

	/* Enable Ethernet TX and RX Packet Interrupts. */
	EthernetIntEnable(mac, ETH_INT_RX | ETH_INT_TX);
}

void lwIPInit(LWIP_DRIVER_INFO* drv_info, ip_adr_set* set)
{
	LWIP_DRIVER_DATA* drv_data = drv_info->drv_data;

    struct ip_addr ip_addr;
    struct ip_addr net_mask;
    struct ip_addr gw_addr;

    //
    // Check the parameters.
    //
#if LWIP_DHCP && LWIP_AUTOIP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_DHCP) ||
           (set->ip_addr_mode == IPADDR_USE_AUTOIP));
#elif LWIP_DHCP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_DHCP));
#elif LWIP_AUTOIP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_AUTOIP);)
#else
    ASSERT(set->ip_addr_mode == IPADDR_USE_STATIC);
#endif

    //
    // Enable the ethernet peripheral.
    //
	SysCtlPeripheralEnable(drv_info->info.peripheral_indx);

    //
    // Program the MAC address into the Ethernet controller.
    //
    unsigned long ulUser0, ulUser1;
    unsigned char pucMACArray[8];
    ROM_FlashUserGet(&ulUser0, &ulUser1);
    if((ulUser0 == 0xffffffff) || (ulUser1 == 0xffffffff))
    {
        //
        // We should never get here.  This is an error if the MAC address has
        // not been programmed into the device.  Exit the program.
        //
        TRACE1("MAC Address Not Programmed!\n");
        ulUser0 = 0x00123456;
        ulUser1 = 0x00123456;
    }

    //
    // Convert the 24/24 split MAC address from NV ram into a 32/16 split MAC
    // address needed to program the hardware registers, then program the MAC
    // address into the Ethernet Controller registers.
    //
    pucMACArray[0] = ((ulUser0 >>  0) & 0xff);
    pucMACArray[1] = ((ulUser0 >>  8) & 0xff);
    pucMACArray[2] = ((ulUser0 >> 16) & 0xff);
    pucMACArray[3] = ((ulUser1 >>  0) & 0xff);
    pucMACArray[4] = ((ulUser1 >>  8) & 0xff);
    pucMACArray[5] = ((ulUser1 >> 16) & 0xff);
    EthernetMACAddrSet(drv_info->hw_base, pucMACArray);

    //
    // Initialize lwIP library modules
    //
    lwip_init();

    //
    // Setup the network address values.
    //
    if(set->ip_addr_mode == IPADDR_USE_STATIC)
    {
        ip_addr.addr = htonl(set->ip_addr);
        net_mask.addr = htonl(set->net_mask);
        gw_addr.addr = htonl(set->gw_addr);
    }
#if LWIP_DHCP || LWIP_AUTOIP
    else
    {
        ip_addr.addr = 0;
        net_mask.addr = 0;
        gw_addr.addr = 0;
    }
#endif

    //
    // Create, configure and add the Ethernet controller interface with
    // default settings.
    //
    netif_add(
    		&drv_data->lwip_netif,	//pre-allocated netif structure
    		&ip_addr, 				//IP address for the new netif
    		&net_mask, 				//network mask for the new netif
    		&gw_addr, 				//gateway IP address for the new netif
    		drv_info->hw_base,		//opaque data passed to the new netif
            ethernetif_init,		//callback function that initializes the interface
            ip_input				//callback function that is called to pass
            						//ingress packets up in the protocol layer stack
            );

    netif_set_default(&drv_data->lwip_netif);

    //
    // Indicate that we are running in static IP mode.
    //
    drv_data->ip_addr_mode = set->ip_addr_mode;

    //
    // Start DHCP, if enabled.
    //
#if LWIP_DHCP
    if(drv_data->ip_addr_mode == IPADDR_USE_DHCP)
    {
        dhcp_start(&drv_data->lwip_netif);
    }
#endif

    //
    // Start AutoIP, if enabled and DHCP is not.
    //
#if LWIP_AUTOIP
    if(drv_data->ip_addr_mode == IPADDR_USE_AUTOIP)
    {
        autoip_start(&drv_data->lwip_netif);
    }
#endif

    //
    // Bring the interface up.
    //
    netif_set_up(&drv_data->lwip_netif);
}

void lwipdrv_thread(LWIP_DRIVER_INFO* drv_info)
{
	LWIP_DRIVER_DATA*  drv_data = drv_info->drv_data;
    CHandle helper;

	ip_adr_set set;

	ALLOCATE_SIGNAL(LWIP_THREAD_RXTXSIG);

	set.ip_addr = 0;
	set.gw_addr = 0;
	set.net_mask = 0;
	set.ip_addr_mode = IPADDR_USE_DHCP;

	lwIPInit(drv_info, &set);
	helper.tsk_safe_open(drv_info->info.drv_index, 0);
	helper.mode0 = 0; //mode0=0 control handle
	helper.tsk_start_read(NULL, 0);
    while(1)
    {
    	unsigned int sig;

    	sig = tsk_wait_signal(SIGNAL_ANY, 10);

        // 1) process ISRs
    	if(sig)
    	{
			//queue in/out packets
            stellarisif_interrupt(&drv_data->lwip_netif);

			//process input
		    ethernetif_input(&drv_data->lwip_netif);
	    	drv_info->hw_base->MACIM |= (ETH_INT_TX |  ETH_INT_RX);
    	}

        // 2) get waiting clients
		if(sig & helper.signal)
        {
			tcp_handle* client;

        	helper.res &= ~FLG_SIGNALED;

			while( (client = (tcp_handle*)helper.dst.as_voidptr) )
			{
				RES_CODE res  = RES_SIG_ERROR;

				helper.dst.as_voidptr = client->next;

			    if(client->cmd & FLAG_COMMAND)
			    {
			    	if((client->cmd>>4) <= MAX_LWIPCALLBACK)
			    	{
			    		res = lwip_api_functions[client->cmd>>4](client, &drv_data->lwip_netif);
			    	}
			    } else
			    {
				    if(client->cmd & FLAG_WRITE)
				    {
				    	res = lwip_api_write(client, &drv_data->lwip_netif);
				    } else
					    if(client->cmd & FLAG_READ)
					    {
					    	res = lwip_api_read(client);
					    }
			    }

			    if(res & FLG_SIGNALED)
			    {
				    tsk_HND_SET_STATUS(client, res);
			    }
			}
			helper.tsk_start_read(NULL, 0);
        }

        // 3) process lwip timeouts
		sig = CURRENT_TIME;
    	if(sig != drv_data->timer_main)
    	{
        	if(sig < drv_data->timer_main)
        	{
        		//timer overflow
        		drv_data->timer_mdix &= 0x7FFFFFFF;
        		drv_data->timer_tcp  &= 0x7FFFFFFF;
				#if HOST_TMR_INTERVAL
				drv_data->timer_host &= 0x7FFFFFFF;
				#endif
				#if LWIP_ARP
				drv_data->timer_arp &= 0x7FFFFFFF;
				#endif
				#if LWIP_AUTOIP
				drv_data->timer_autoIP &= 0x7FFFFFFF;
				#endif
				#if LWIP_DHCP
				drv_data->timer_DHCPCoarse &= 0x7FFFFFFF;
				drv_data->timer_DHCPFine &= 0x7FFFFFFF;
				#endif
        	}
        	drv_data->timer_main = sig;
            lwIPServiceTimers(&drv_data->lwip_netif);
    	}
    }


}

void LWIP_ISR(LWIP_DRIVER_INFO* drv_info )
{
	MAC_Type* mac = drv_info->hw_base;
    unsigned long ulStatus;

    //
    // Read and Clear the interrupt.
    //
    ulStatus = mac->MACRIS;
    mac->MACIACK = ulStatus;

    //
    // If a transmit/rx interrupt was active, run the low-level interrupt
    // handler.
    //
    if(ulStatus)
    {
    	usr_send_signal(&lwipdrv_task, LWIP_THREAD_RXTXSIG);
    	mac->MACIM &= ~  (ETH_INT_TX |  ETH_INT_RX);
    }

}
