==> miro-kostadinov/tmos/tmos/services/lwip-1.4.1/src/ports/stm32/lwip_drv.cpp <==
#include <tmos.h>
#include "lwip/opt.h"
#include "lwip/sys.h"
#include <lwip_drv.h>
#include "lwip/tcp_impl.h"
#include "lwip/autoip.h"
#include "lwip/dhcp.h"
#include "lwip/init.h"
#include "lwip/stats.h"
#include <lwip_api.h>

static err_t low_level_transmit(struct netif *netif, struct pbuf *p)
{
	const LWIP_DRIVER_INFO* drv_info = ((LWIP_DRIVER_DATA*)netif)->drv_info;
	ETH_DMADescTypeDef* DmaTxDesc;
	err_t errval;
	uint32_t byteslefttocopy;
	uint32_t payloadoffset;
	uint32_t bufferoffset;
	uint32_t framelength = 0;
	struct pbuf *q;

	DmaTxDesc = drv_info->mac_cfg->mac_data->TxDesc;
	if (DmaTxDesc->Status & ETH_DMATXDESC_OWN)
	{
		errval = ERR_USE;
	} else
	{
		errval = ERR_OK;
		bufferoffset = 0;

		/* copy frame from pbufs to driver buffers */
		for (q = p; q != NULL; q = q->next)
		{

			/* Get bytes in current lwIP buffer */
			byteslefttocopy = q->len;
			payloadoffset = 0;

			/* Check if the length of data to copy is bigger than Tx buffer size*/
			while ((byteslefttocopy + bufferoffset) > ETH_TX_BUF_SIZE)
			{
				/* Copy data to Tx buffer*/
				memcpy( DmaTxDesc->Buffer1Addr + bufferoffset, (uint8_t*) q->payload + payloadoffset,
						ETH_TX_BUF_SIZE - bufferoffset);

				/* Point to next descriptor */
				DmaTxDesc = DmaTxDesc->Buffer2NextDescAddr;

				/* Check if the buffer is available */
				if (DmaTxDesc->Status & ETH_DMATXDESC_OWN)
				{
					errval = ERR_USE;
					break;
				}


				byteslefttocopy -=  (ETH_TX_BUF_SIZE - bufferoffset);
				payloadoffset +=  (ETH_TX_BUF_SIZE - bufferoffset);
				framelength += (ETH_TX_BUF_SIZE - bufferoffset);
				bufferoffset = 0;
			}
			if(errval != ERR_OK)
				break;

			/* Copy the remaining bytes */
			memcpy( DmaTxDesc->Buffer1Addr + bufferoffset,
					(uint8_t*) q->payload + payloadoffset,	byteslefttocopy);
			bufferoffset += byteslefttocopy;
			framelength += byteslefttocopy;
		}
	}

	if(errval == ERR_OK)
	{
		/* Dereference the pbuf from the queue. */
		pbuf_free(p);

		LINK_STATS_INC(link.xmit);
	} else
	{
		framelength = 0;
	}
	HAL_ETH_TransmitFrame(drv_info->hw_base, drv_info->mac_cfg->mac_data, framelength);

	return errval;

}

static err_t low_level_output(struct netif *netif, struct pbuf *p)
{
	LWIP_DRIVER_DATA* drv_data = (LWIP_DRIVER_DATA*)netif;
	err_t errval;
	SYS_ARCH_DECL_PROTECT(lev);

	/**
	 * This entire function must run within a "critical section" to preserve
	 * the integrity of the transmit pbuf queue.
	 *
	 */
	SYS_ARCH_PROTECT(lev);

	/**
	 * Bump the reference count on the pbuf to prevent it from being
	 * freed till we are done with it.
	 *
	 */
	pbuf_ref(p);

	/**
	 * If the transmitter is idle, and there is nothing on the queue,
	 * send the pbuf now.
	 *
	 */
	errval = low_level_transmit(netif, p);
	TRACELN_LWIP("ETH: tx %x %u res %u", p, p->tot_len, errval);
	if(errval != ERR_OK)
	{
		/* Otherwise place the pbuf on the transmit queue. */
		if (!enqueue_packet(p, &drv_data->txq))
		{
			/* if no room on the queue, free the pbuf reference and return error. */
			pbuf_free(p);
			errval = ERR_MEM;
		}

	}


	/* Return to prior interrupt state and return. */
	SYS_ARCH_UNPROTECT(lev);
	return (errval);
}

static struct pbuf *low_level_receive(struct netif *netif)
{
	const LWIP_DRIVER_INFO* drv_info = ((LWIP_DRIVER_DATA*) netif)->drv_info;
	struct pbuf *p, *q;
	ETH_DMADescTypeDef *dmarxdesc;
	uint32_t dtors;
	uint32_t bufferoffset, byteslefttocopy, payloadoffset;

	p = NULL;
	dtors = HAL_ETH_GetReceivedFrame_IT(drv_info->mac_cfg);
	if(dtors)
	{
	    /* We allocate a pbuf chain of pbufs from the Lwip buffer pool */
	    p = pbuf_alloc(PBUF_RAW, drv_info->mac_cfg->mac_data->rx_len, PBUF_POOL);
	    if(p)
	    {
		    dmarxdesc = drv_info->mac_cfg->mac_data->RxDesc;
		    bufferoffset = 0;

		    for(q = p; q != NULL; q = q->next)
		    {
		      byteslefttocopy = q->len;
		      payloadoffset = 0;

		      /* Check if the length of bytes to copy in current pbuf is bigger than Rx buffer size*/
		      while( (byteslefttocopy + bufferoffset) > ETH_RX_BUF_SIZE )
		      {
		        /* Copy data to pbuf*/
		        memcpy( (u8_t*)q->payload + payloadoffset, dmarxdesc->Buffer1Addr + bufferoffset, (ETH_RX_BUF_SIZE - bufferoffset));

		        /* Point to next descriptor */
		        dmarxdesc = dmarxdesc->Buffer2NextDescAddr;

		        byteslefttocopy -=  (ETH_RX_BUF_SIZE - bufferoffset);
		        payloadoffset +=  (ETH_RX_BUF_SIZE - bufferoffset);
		        bufferoffset = 0;
		      }

		      /* Copy remaining data in pbuf */
		      memcpy( (u8_t*)q->payload + payloadoffset, dmarxdesc->Buffer1Addr + bufferoffset, byteslefttocopy);
		      bufferoffset = bufferoffset + byteslefttocopy;
		    }
			/* Adjust the link statistics */
			LINK_STATS_INC(link.recv);
	    } else
	    {
	    	// out of memory -> drop the frame
	        LINK_STATS_INC(link.memerr);
	        LINK_STATS_INC(link.drop);
	    }
    	HAL_ETH_ReleaseFrame(drv_info->mac_cfg->mac_data, dtors);
	}
	  if (drv_info->hw_base->ETH_DMASR & ETH_DMASR_RBUS)
	  {
	    /* Clear RBUS ETHERNET DMA flag */
		  drv_info->hw_base->ETH_DMASR = ETH_DMASR_RBUS;
	  }
	    /* Resume DMA reception */
	  drv_info->hw_base->ETH_DMARPDR = 0;
	return p;
}

static void low_level_init(struct netif *netif)
{
	LWIP_DRIVER_DATA* drv_data = (LWIP_DRIVER_DATA*)netif;
	const LWIP_DRIVER_INFO* drv_info = drv_data->drv_info;

	EthernetMACAddrGet(drv_info->mac_cfg);

	/* configure ethernet peripheral (GPIOs, clocks, MAC, DMA) */
	if (HAL_ETH_Init(drv_info->hw_base, drv_info->mac_cfg) == RES_OK)
	{
		/* Set netif link flag */
		netif->flags |= NETIF_FLAG_LINK_UP;
	}

	/* Initialize Tx Descriptors list: Chain Mode */
	HAL_ETH_DMATxDescListInit(drv_info->hw_base, drv_info->mac_cfg);

	/* Initialize Rx Descriptors list: Chain Mode  */
	HAL_ETH_DMARxDescListInit(drv_info->hw_base, drv_info->mac_cfg);

	/* set MAC hardware address length */
	netif->hwaddr_len = ETHARP_HWADDR_LEN;

	/* set netif MAC hardware address */
	memcpy(netif->hwaddr, drv_info->mac_cfg->mac_data->mac_adr, ETHARP_HWADDR_LEN);


	/* maximum transfer unit */
	netif->mtu = 1500;

	/* device capabilities */
	/* don't set NETIF_FLAG_ETHARP if this device is not an ethernet one */
	netif->flags |= NETIF_FLAG_BROADCAST | NETIF_FLAG_ETHARP;

	/* Enable MAC and DMA transmission and reception */
	HAL_ETH_Start(drv_info->hw_base);

	  /**** Configure PHY to generate an interrupt when Eth Link state changes ****/
	HAL_ETH_PHY_INTs(drv_info->hw_base, drv_info->mac_cfg);


	/* Enable the Ethernet global Interrupt */
	drv_enable_isr(&drv_info->info);
}

void lwIPInit(LWIP_DRIVER_INFO* drv_info, ip_adr_set* set)
{
	LWIP_DRIVER_DATA* drv_data = drv_info->drv_data;

    //
    // Check the parameters.
    //
#if LWIP_DHCP && LWIP_AUTOIP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_DHCP) ||
           (set->ip_addr_mode == IPADDR_USE_AUTOIP));
#elif LWIP_DHCP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_DHCP));
#elif LWIP_AUTOIP
    ASSERT((set->ip_addr_mode == IPADDR_USE_STATIC) ||
           (set->ip_addr_mode == IPADDR_USE_AUTOIP);)
#else
    ASSERT(set->ip_addr_mode == IPADDR_USE_STATIC);
#endif

	PIO_Cfg_List(drv_info->eth_pins);

    //
    // Enable the ethernet peripheral.
    //
	RCCPeripheralEnable (ID_PERIPH_ETHMAC);
	RCCPeripheralEnable (ID_PERIPH_ETHMACTX);
	RCCPeripheralEnable (ID_PERIPH_ETHMACRX);
	RCCPeripheralReset(ID_PERIPH_ETHMAC);
	RCCPeripheralReset(ID_PERIPH_ETHMACTX);
	RCCPeripheralReset(ID_PERIPH_ETHMACRX);

	if (drv_info->mac_cfg->mac_cfg_flags & MAC_CFG_FLG_MCO1)
	{
		RCC->RCC_CFGR = (RCC->RCC_CFGR & ~(RCC_CFGR_MCO1 | RCC_CFGR_MCO1PRE)) | drv_info->mac_cfg->RCC_CFGR;
	} else
		if (drv_info->mac_cfg->mac_cfg_flags & MAC_CFG_FLG_MCO2)
		{
			RCC->RCC_CFGR = (RCC->RCC_CFGR & ~(RCC_CFGR_MCO2 | RCC_CFGR_MCO2PRE)) | drv_info->mac_cfg->RCC_CFGR;
		}

    //
    // Initialize lwIP library modules
    //
    lwip_init();


    //
    // Create, configure and add the Ethernet controller interface with
    // default settings.
    //
    netif_add(
    		&drv_data->lwip_netif,	//pre-allocated netif structure
    		&set->ip_addr, 			//IP address for the new netif
    		&set->net_mask, 		//network mask for the new netif
    		&set->gw_addr, 			//gateway IP address for the new netif
    		drv_info->hw_base,		//opaque data passed to the new netif
            ethernetif_init,		//callback function that initializes the interface
            ip_input				//callback function that is called to pass
            						//ingress packets up in the protocol layer stack
            );

    netif_set_default(&drv_data->lwip_netif);

    //
    // Indicate that we are running in static IP mode.
    //
    drv_data->ip_addr_mode = set->ip_addr_mode;

    //
    // Start DHCP, if enabled.
    //
#if LWIP_DHCP
    if(drv_data->ip_addr_mode == IPADDR_USE_DHCP)
    {
        dhcp_start(&drv_data->lwip_netif);
    }
#endif

    //
    // Start AutoIP, if enabled and DHCP is not.
    //
#if LWIP_AUTOIP
    if(drv_data->ip_addr_mode == IPADDR_USE_AUTOIP)
    {
        autoip_start(&drv_data->lwip_netif);
    }
#endif

    //
    // Bring the interface up.
    //
    netif_set_up(&drv_data->lwip_netif);
}

void lwipdrv_thread(LWIP_DRIVER_INFO* drv_info)
{
	LWIP_DRIVER_DATA*  drv_data = drv_info->drv_data;
    CHandle helper;

	ip_adr_set set;

	drv_data->drv_info = drv_info;
	ALLOCATE_SIGNAL(LWIP_THREAD_RXTXSIG);

	lwip_default_settings(&set);

	lwIPInit(drv_info, &set);
	helper.tsk_safe_open(drv_info->info.drv_index, 0);
	helper.mode0 = 0; //mode0=0 control handle
	helper.tsk_start_read(NULL, 0);
    while(1)
    {
    	unsigned int sig;

    	sig = tsk_wait_signal(SIGNAL_ANY, 10);

        // 1) process ISRs
    	if(sig)
    	{
			//queue in/out packets
            stm32_eth_interrupt(&drv_data->lwip_netif);

			//process input
		    ethernetif_input(&drv_data->lwip_netif);
    	}

        // 2) get waiting clients
		if(sig & helper.signal)
        {
			CSocket* client;

        	helper.res &= ~FLG_SIGNALED;

			while( (client = (CSocket*)helper.dst.as_voidptr) )
			{
				RES_CODE res  = RES_SIG_ERROR;

				helper.dst.as_voidptr = client->next;

			    if(client->cmd & FLAG_COMMAND)
			    {
			    	res = lwip_process_cmd(client, &drv_data->lwip_netif);
			    } else
			    {
				    if(client->cmd & FLAG_WRITE)
				    {
				    	res = lwip_api_write(client, &drv_data->lwip_netif);
				    } else
					    if(client->cmd & FLAG_READ)
					    {
					    	res = lwip_api_read(client);
					    }
			    }

			    if(res & FLG_SIGNALED)
			    {
				    tsk_HND_SET_STATUS(client, res);
			    }
			}
			helper.tsk_start_read(NULL, 0);
        }

        // 3) process lwip timeouts
		sig = CURRENT_TIME;
    	if(sig != drv_data->timer_main)
    	{
        	if(sig < drv_data->timer_main)
        	{
        		//timer overflow
        		drv_data->timer_mdix &= 0x7FFFFFFF;
        		drv_data->timer_tcp  &= 0x7FFFFFFF;
				#if HOST_TMR_INTERVAL
				drv_data->timer_host &= 0x7FFFFFFF;
				#endif
				#if LWIP_ARP
				drv_data->timer_arp &= 0x7FFFFFFF;
				#endif
				#if LWIP_AUTOIP
				drv_data->timer_autoIP &= 0x7FFFFFFF;
				#endif
				#if LWIP_DHCP
				drv_data->timer_DHCPCoarse &= 0x7FFFFFFF;
				drv_data->timer_DHCPFine &= 0x7FFFFFFF;
				#endif
        	}
        	drv_data->timer_main = sig;
            lwIPServiceTimers(&drv_data->lwip_netif);
    	}
    }


}

void LWIP_ISR(LWIP_DRIVER_INFO* drv_info )
{
	ETH_TypeDef* mac = drv_info->hw_base;
	uint32_t status;

	status = mac->ETH_DMASR;
	TRACELN_LWIP("ETH: irq %x", status);
	if(status)
	{
		mac->ETH_DMASR = status;
    	usr_send_signal(&lwipdrv_task, LWIP_THREAD_RXTXSIG);
	}

}
